<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.railway.mmfile.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="259dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/textViewZC"
            android:textColor="@color/qmui_config_color_blue"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/qmui_config_color_blue"
                android:text="@string/UNAME"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextR1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/qmui_config_color_blue"
                android:text="@string/NickName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextR4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/qmui_config_color_blue"
                android:text="@string/UserPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextX1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/CheckBox1"
                android:textColor="@color/qmui_config_color_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="显示" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/qmui_config_color_blue"
                android:gravity="center_vertical"
                android:text="@string/ConfirmPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextX2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/CheckBox2"
                android:layout_width="wrap_content"
                android:textColor="@color/qmui_config_color_blue"
                android:layout_height="wrap_content"
                android:text="显示" />
        </LinearLayout>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/buttonX1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Confirm"
        android:textSize="18sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        />

</LinearLayout>

