<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.railway.mmfile.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 用户登录： -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewDL"
                android:textSize="24dp"
                android:gravity="center_horizontal"
                android:textColor="@color/qmui_config_color_blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/UNAME"
                    android:textSize="18dp"
                    android:textColor="@color/qmui_config_color_blue"/>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textSize="18dp"

                    android:background="@drawable/editbg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="80dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/UserPassword"
                    android:textColor="@color/qmui_config_color_blue"
                    android:textSize="18dp"
                    />


                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/editbg"
                    android:inputType="textPassword"
                    android:textSize="18dp" />

                <CheckBox
                    android:id="@+id/CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/qmui_config_color_blue"
                    android:text="显示" />
            </LinearLayout>
            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/buttonDL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Confirm"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:background="@drawable/buttonbg"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/buttonZC"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:onClick="Register"
                android:textSize="18sp"
                android:scaleType="centerInside"

                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/textViewZC" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>